Clients words section added

--- a/index.html
+++ b/index.html
@@ -214,6 +214,52 @@
     </div>
   </section>
 
+  <section class=" mx-5">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 ">
+        <div class="card text-center w-75 mx-auto clients">
+          <div class="card-body">
+            <p class="card-text">Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+            <img class="img-fluid" src="images/person 2.png" alt="">
+            <h5 class="my-2">Regina Miles</h5>
+            <p>Banker</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card text-center w-75 mx-auto clients">
+          <div class="card-body">
+            <p class="card-text">Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+            <img class="img-fluid" src="images/person 3.png" alt="">
+            <h5 class="my-2">Jone Drake</h5>
+            <p>Banker</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+       <div class="card text-center w-75 mx-auto clients">
+          <div class="card-body">
+            <p class="card-text">Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+            <img class="img-fluid" src="images/person 1.png" alt="">
+            <h5 class="my-2">Cret Yater</h5>
+            <p>Banker</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
 
     <!-- Bootstrap JavaScript Libraries -->
